--- a/0319/0319.ipynb
+++ b/0319/0319.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11,15 +11,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入數字: 011234\n",
+      "請輸入數字: 12334009765\n",
       "True\n"
      ]
     }
    ],
    "source": [
     "#數字比對\n",
-    "number = list(input(\"請輸入數字: \"))\n",
-    "print(bool ( not number.count(\"0\")==1 or number.count(\"1\")>1 or number.count(\"2\")>1 or number.count(\"3\")>1 or number.count(\"4\")>1 or number.count(\"5\")>1 or number.count(\"6\")>1 or number.count(\"7\")>1 or number.count(\"8\")>1 or number.count(\"9\")>1 ))"
+    "x = input(\"請輸入數字: \")\n",
+    "print(not len(set(x))==len(x))"
    ]
   },
   {
